--- a/CSS Glitched Text/main.html
+++ b/CSS Glitched Text/main.html
@@ -9,6 +9,7 @@
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 </head>
 <body>
+    <div class='bar'></div>
     <div class="glitch" data-text="err0r 404: something's n0t right">
         Error 404: Something not right
     </div>
